[package]
name = "rusty-chip"
version = "0.1.0"
authors = ["mkoelle"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "rusty-chip"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
esp-idf-svc = "0.51.0"
espup = "0.15.1"

[build-dependencies]
embuild = "0.33.1"
