[package]
name = "rusty-chip"
version = "0.1.0"
authors = ["mkoelle"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "rusty-chip"
harness = false # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow      = "=1.0.99"
esp-idf-svc = "=0.51.0"
log         = "0.4.27"
# rgb-led     = { path = "../../common/lib/rgb-led" }
toml-cfg    = "=0.2.0"
# wifi        = { path = "../../common/lib/wifi" }

[build-dependencies]
embuild  = "=0.33.1"
