[package]
name = "rusty-chip"
version = "0.1.0"
authors = ["mkoelle"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rusty-chip"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45.2"

[build-dependencies]
embuild = "0.33"
